--- a/Source/MyLeetCode.vcxproj
+++ b/Source/MyLeetCode.vcxproj
@@ -67,13 +67,162 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="000_util.cpp" />
+    <ClCompile Include="001_Two Sum.cpp" />
+    <ClCompile Include="002_Add Two Numbers.cpp" />
+    <ClCompile Include="003_Longest Substring Without Repeating Characters.cpp" />
+    <ClCompile Include="007_Reverse Integer.cpp" />
+    <ClCompile Include="008_String to Integer (atoi).cpp" />
+    <ClCompile Include="009_Palindrome_Number.cpp" />
+    <ClCompile Include="013_RomanToInteger.cpp" />
+    <ClCompile Include="014_Longest_Common_Prefix.cpp" />
+    <ClCompile Include="019_Remove Nth Node From End of List.cpp" />
+    <ClCompile Include="020_Vaild_Parentheses.cpp" />
+    <ClCompile Include="021_Merge Two Sorted Lists.cpp" />
+    <ClCompile Include="023_Merge k Sorted Lists.cpp" />
+    <ClCompile Include="024_Swap Nodes in Pairs.cpp" />
+    <ClCompile Include="026_Remove_dup_from_sroted_arr.cpp" />
+    <ClCompile Include="027_Remove Element.cpp" />
+    <ClCompile Include="028_Implement_strStr.cpp" />
+    <ClCompile Include="033_Search in Rotated Sorted Array.cpp" />
+    <ClCompile Include="035_Search_Insert_Position.cpp" />
+    <ClCompile Include="038_Count_and_Say.cpp" />
+    <ClCompile Include="039_Combination Sum.cpp" />
+    <ClCompile Include="040_Combination Sum II.cpp" />
+    <ClCompile Include="041_First Missing Positive.cpp" />
+    <ClCompile Include="050_Pow(x, n).cpp" />
+    <ClCompile Include="053_Maximum_Subarray.cpp" />
+    <ClCompile Include="054_Spiral Matrix.cpp" />
+    <ClCompile Include="058_Length_of_Last_Word.cpp" />
+    <ClCompile Include="059_Spiral Matrix II.cpp" />
+    <ClCompile Include="062_Unique Paths.cpp" />
+    <ClCompile Include="063_Unique Paths II.cpp" />
+    <ClCompile Include="064_Minimum Path Sum.cpp" />
+    <ClCompile Include="066_Plus_One.cpp" />
+    <ClCompile Include="067_Add Binary.cpp" />
+    <ClCompile Include="069_Sqrt(x).cpp" />
+    <ClCompile Include="070_Climbing Stairs.cpp" />
+    <ClCompile Include="075_Sort Colors.cpp" />
+    <ClCompile Include="077_Combinations.cpp" />
+    <ClCompile Include="078_Subsets.cpp" />
+    <ClCompile Include="080_Remove Duplicates from Sorted Array II.cpp" />
+    <ClCompile Include="081_Search in Rotated Sorted Array II.cpp" />
+    <ClCompile Include="082_Remove Duplicates from Sorted List II.cpp" />
+    <ClCompile Include="083_Remove Duplicates from Sorted List.cpp" />
+    <ClCompile Include="088_ Merge_Sorted_Array.cpp" />
+    <ClCompile Include="090_Subsets II.cpp" />
+    <ClCompile Include="092_Reverse Linked List II.cpp" />
     <ClCompile Include="09_Palindrome_Number.cpp" />
+    <ClCompile Include="100_Same Tree.cpp" />
+    <ClCompile Include="101_Symmetric Tree.cpp" />
+    <ClCompile Include="104_Maximum Depth of Binary Tree.cpp" />
+    <ClCompile Include="107_Binary Tree Level Order Traversal II.cpp" />
+    <ClCompile Include="108_Convert Sorted Array to Binary Search Tree.cpp" />
+    <ClCompile Include="110_Balanced Binary Tree.cpp" />
+    <ClCompile Include="111_Minimum Depth of Binary Tree.cpp" />
+    <ClCompile Include="112_Path Sum.cpp" />
+    <ClCompile Include="113_Path Sum II.cpp" />
+    <ClCompile Include="118_Pascal%27s Triangle.cpp" />
+    <ClCompile Include="119_Pascal%27s Triangle II.cpp" />
+    <ClCompile Include="121_Best Time to Buy and Sell Stock.cpp" />
+    <ClCompile Include="122_Best Time to Buy and Sell Stock II.cpp" />
+    <ClCompile Include="125_Vaild_Palindrome.cpp" />
+    <ClCompile Include="136_Single Number.cpp" />
     <ClCompile Include="13_RomanToInteger.cpp" />
+    <ClCompile Include="141_Linked List Cycle.cpp" />
+    <ClCompile Include="148_Sort List.cpp" />
+    <ClCompile Include="151_Reverse Words in a String.cpp" />
+    <ClCompile Include="153_Find Minimum in Rotated Sorted Array.cpp" />
+    <ClCompile Include="155_Min Stack.cpp" />
+    <ClCompile Include="160_Intersection of Two Linked Lists.cpp" />
+    <ClCompile Include="167_Two Sum II - Input array is sorted.cpp" />
+    <ClCompile Include="169_Majority Element.cpp" />
+    <ClCompile Include="171_Excel Sheet Column Number.cpp" />
+    <ClCompile Include="172_Factorial Trailing Zeroes.cpp" />
+    <ClCompile Include="179_Largest Number.cpp" />
+    <ClCompile Include="189_Rotate Array.cpp" />
+    <ClCompile Include="190_Reverse Bits.cpp" />
+    <ClCompile Include="191_Number of 1 Bits.cpp" />
+    <ClCompile Include="198_House Robber.cpp" />
+    <ClCompile Include="203_Remove Linked List Elements.cpp" />
+    <ClCompile Include="206_Reverse Linked List.cpp" />
     <ClCompile Include="20_Vaild_Parentheses.cpp" />
+    <ClCompile Include="215_Kth Largest Element in an Array.cpp" />
+    <ClCompile Include="216_Combination Sum III.cpp" />
+    <ClCompile Include="217_Contains Duplicate.cpp" />
+    <ClCompile Include="219_Contains Duplicate II.cpp" />
+    <ClCompile Include="225_Implement Stack using Queues.cpp" />
+    <ClCompile Include="226_Invert Binary Tree.cpp" />
+    <ClCompile Include="231_Power of Two.cpp" />
+    <ClCompile Include="232_Implement Queue using Stacks.cpp" />
+    <ClCompile Include="234_Palindrome Linked List.cpp" />
+    <ClCompile Include="237_Delete Node in a Linked List.cpp" />
+    <ClCompile Include="238_Product of Array Except Self.cpp" />
+    <ClCompile Include="242_Valid Anagram.cpp" />
+    <ClCompile Include="257_Binary Tree Paths.cpp" />
+    <ClCompile Include="258_Add Digits.cpp" />
+    <ClCompile Include="268_Missing Number.cpp" />
     <ClCompile Include="26_Remove_dup_from_sroted_arr.cpp" />
-    <ClCompile Include="35_Search_Insert_Position.cpp" />
+    <ClCompile Include="283_Move Zeroes.cpp" />
+    <ClCompile Include="300_Longest Increasing Subsequence.cpp" />
+    <ClCompile Include="326_Power of Three.cpp" />
+    <ClCompile Include="328_Odd Even Linked List.cpp" />
+    <ClCompile Include="338_Counting Bits.cpp" />
+    <ClCompile Include="344_Reverse_String.cpp" />
+    <ClCompile Include="345_Reverse Vowels of a String.cpp" />
+    <ClCompile Include="349_Intersection of Two Arrays.cpp" />
+    <ClCompile Include="350_Intersection of Two Arrays II.cpp" />
+    <ClCompile Include="371_Sum of Two Integers.cpp" />
+    <ClCompile Include="377_Combination Sum IV.cpp" />
+    <ClCompile Include="383_Ransom Note.cpp" />
+    <ClCompile Include="387_First Unique Character in a String.cpp" />
+    <ClCompile Include="404_Sum of Left Leaves.cpp" />
+    <ClCompile Include="412_Fizz Buzz.cpp" />
+    <ClCompile Include="414_Third Maximum Number.cpp" />
+    <ClCompile Include="415_Add Strings.cpp" />
+    <ClCompile Include="437_Path Sum III.cpp" />
+    <ClCompile Include="448_Find All Numbers Disappeared in an Array.cpp" />
+    <ClCompile Include="450_Delete Node in a BST.cpp" />
+    <ClCompile Include="476_Number Complement.cpp" />
+    <ClCompile Include="485_Max Consecutive Ones.cpp" />
+    <ClCompile Include="520_Detect Capital.cpp" />
+    <ClCompile Include="532_K-diff Pairs in an Array.cpp" />
+    <ClCompile Include="538_Convert BST to Greater Tree.cpp" />
+    <ClCompile Include="541_Reverse_String_II.cpp" />
+    <ClCompile Include="543_Diameter of Binary Tree.cpp" />
+    <ClCompile Include="551_Student Attendance Record I.cpp" />
+    <ClCompile Include="557_Reverse_Words_in_String_III.cpp" />
+    <ClCompile Include="561_Array Partition I.cpp" />
+    <ClCompile Include="566_Reshape the Matrix.cpp" />
+    <ClCompile Include="572_Subtree of Another Tree.cpp" />
+    <ClCompile Include="617_Merge Two Binary Trees.cpp" />
+    <ClCompile Include="657_Robot Return to Origin.cpp" />
+    <ClCompile Include="674_Longest Continuous Increasing Subsequence.cpp" />
+    <ClCompile Include="697_Degree of an Array.cpp" />
+    <ClCompile Include="700_Search in a Binary Search Tree.cpp" />
+    <ClCompile Include="703_Kth Largest Element in a Stream.cpp" />
+    <ClCompile Include="707_Design Linked List.cpp" />
+    <ClCompile Include="709_To Lower Case.cpp" />
+    <ClCompile Include="746_Min Cost Climbing Stairs.cpp" />
+    <ClCompile Include="788_Rotated Digits.cpp" />
+    <ClCompile Include="804_Unique Morse Code Words.cpp" />
+    <ClCompile Include="844_Backspace String Compare.cpp" />
+    <ClCompile Include="859_Buddy Strings.cpp" />
+    <ClCompile Include="872_Leaf-Similar Trees.cpp" />
+    <ClCompile Include="876_Middle of the Linked List.cpp" />
+    <ClCompile Include="884_Uncommon Words from Two Sentences.cpp" />
+    <ClCompile Include="896_Monotonic Array.cpp" />
+    <ClCompile Include="897_Increasing Order Search Tree.cpp" />
+    <ClCompile Include="905_Sort Array By Parity.cpp" />
+    <ClCompile Include="917_Reverse Only Letters.cpp" />
+    <ClCompile Include="922_Sort Array By Parity II.cpp" />
+    <ClCompile Include="929_Unique Email Addresses.cpp" />
+    <ClCompile Include="937_Reorder Log Files.cpp" />
     <ClCompile Include="NG_58_Length_of_Last_Word.cpp" />
     <ClCompile Include="NG_53_Maximum_Subarray.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="000_util.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
