530_Minimum Absolute Difference in BST.

--- a/Source/MyLeetCode.vcxproj
+++ b/Source/MyLeetCode.vcxproj
@@ -191,6 +191,7 @@
     <ClCompile Include="476_Number Complement.cpp" />
     <ClCompile Include="485_Max Consecutive Ones.cpp" />
     <ClCompile Include="520_Detect Capital.cpp" />
+    <ClCompile Include="530_Minimum Absolute Difference in BST.cpp" />
     <ClCompile Include="532_K-diff Pairs in an Array.cpp" />
     <ClCompile Include="538_Convert BST to Greater Tree.cpp" />
     <ClCompile Include="541_Reverse_String_II.cpp" />
