--- a/Source/MyLeetCode.vcxproj.filters
+++ b/Source/MyLeetCode.vcxproj.filters
@@ -480,6 +480,9 @@
     <ClCompile Include="098_Validate Binary Search Tree.cpp">
       <Filter>Source Files\tree</Filter>
     </ClCompile>
+    <ClCompile Include="530_Minimum Absolute Difference in BST.cpp">
+      <Filter>Source Files\tree</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="000_util.h">
